# FP_QSIM

./: .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  README.md  pyproject.toml
docs/: api.rst  benchmark.rst  conf.py  developer_guide.rst  dino_minigame.rst  explanation.rst  how_to.rst  index.rst  installation.rst  notebooks.rst  plot_benchmark.py  quickstart.rst  tutorial.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_static/: benchmark_results_q4_15.json  benchmark_results_q5_16.json  cards.css  confetti.js  dino_runner.js  fun_buttons.js  rainbow_nav.js
docs/notebooks/: bell_demo.ipynb  simulator_quickstart.ipynb  statevector_benchmark_comparison.ipynb
playground/: einsum_with_for_loops.ipynb  qiskit101.ipynb  statevector_benchmark_comparison.ipynb  test.ipynb  test.py
src/fp_qsim/: __init__.py  pauli.py  simulator.py  simulator_gpu.py  simulator_optimized.py  state_vector.py
tests/: test_simulator.py  test_simulator_cuda.py  test_simulator_optimized.py
