[project]
name = "fp-qsim"
version = "0.1.0"
description = "fp project"
readme = "README.md"
authors = [
    { name = "bennimaximi", email = "benjamingrasselt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "myst-nb>=1.4.0",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pandoc>=2.4",
    "pre-commit>=4.5.1",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.1.0",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
    "ruff>=0.15.7",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
target-version = "py314"
extend-include = ["*.ipynb"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "site-packages",
    "venv",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "PT", "RET", "RUF", "TID", "ERA", "D", "ANN"]
ignore = [
    "D203",
    "D213",
    "RUF022"
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "A001"]
"docs/plot_benchmark.py" = ["D100"]
"docs/notebooks/*.ipynb" = ["D", "ANN"]
"playground/*.ipynb" = ["D", "ANN", "N", "ERA"]
"playground/test.py" = ["D100"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true


[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true  # This forces you to write -> np.ndarray
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "qiskit.*",
    "qiskit_aer.*"
]
ignore_missing_imports = true


[mypy]
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "myst-nb>=1.2.0",
    "pytest-benchmark>=5.1.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]
